--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM hashicorp/terraform:0.12.29
 
+RUN addgroup -S ubuntu && adduser -u 1000 -S ubuntu -G ubuntu
+
 ENV HTTP_PROXY=$HTTP_PROXY
 ENV HTTPS_PROXY=$HTTPS_PROXY
 
