--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,10 +7,12 @@ ENV HTTPS_PROXY=$HTTPS_PROXY
 
 ADD entrypoint.sh /entrypoint.sh
 ADD RunTerraformScript.ps1 /RunTerraformScript.ps1
-ADD main.tf /main.tf
-ADD Variables.tf /Variables.tf
+ADD main.tf /tf/main.tf
+ADD Variables.tf /tf/Variables.tf
 
 RUN chmod +x /entrypoint.sh
 RUN chmod +x /RunTerraformScript.ps1
+RUN chmod +x /tf/main.tf
+RUN chmod +x /tf/Variables.tf
 
 ENTRYPOINT ["/entrypoint.sh"]
