--- a/docker/action.yml
+++ b/docker/action.yml
@@ -1,5 +1,8 @@
 name: Terraform Action
 description: Create VMs using Terraform
+env:
+  NUTANIX_USERNAME: ${{ secrets.NUTANIX_USERNAME }}
+  NUTANIX_PASSWORD: ${{ secrets.NUTANIX_PASSWORD }}
 inputs:
   vmCounts:
     description: Number of VMs to be created
@@ -8,11 +11,11 @@ inputs:
   userName:
     description: user name to log-in to provider
     required: false
-    default: '${{ secrets.NUTANIX_USERNAME }}'
+    default: '${{ env.NUTANIX_USERNAME }}'
   password:
     description:  password to log-in to provider
     required: false
-    default: '${{ secrets.NUTANIX_PASSWORD }}'
+    default: '${{ env.NUTANIX_PASSWORD }}'
 runs:
   using: docker
   image: Dockerfile
