--- a/docker/action.yml
+++ b/docker/action.yml
@@ -16,3 +16,6 @@ inputs:
 runs:
   using: docker
   image: Dockerfile
+  env:
+       NUTANIX_USERNAME: ${{ secrets.NUTANIX_USERNAME }}
+       NUTANIX_PASSWORD: ${{ secrets.NUTANIX_PASSWORD }}
