--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,10 @@ FROM hashicorp/terraform:0.14.11
 
 RUN addgroup -S ubuntu && adduser -u 1000 -S ubuntu -G ubuntu
 
+RUN apk add --update \
+    curl \
+    && rm -rf /var/cache/apk/*
+
 ENV HTTP_PROXY=$HTTP_PROXY
 ENV HTTPS_PROXY=$HTTPS_PROXY
 
