--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM hashicorp/terraform:0.14.11
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
 
 RUN addgroup -S ubuntu && adduser -u 1000 -S ubuntu -G ubuntu
 
