--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -13,7 +13,12 @@ jobs:
       uses: hashicorp/setup-terraform@v1
 
     - name: 'Terraform Init'
-      run: terraform init
+      uses: hashicorp/terraform-github-actions@master
+      with:
+        tf_actions_version: 0.12.13
+        tf_actions_subcommand: 'init'
+        tf_actions_working_dir: '.'
+      
     
     
     
