--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         tf_actions_subcommand: 'init'
         tf_actions_working_dir: './create-vm/docker'
-        tf_actions_version: 0.12.13
+        tf_actions_version: latest
       
     
     
