--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -19,6 +19,15 @@ jobs:
         tf_actions_working_dir: './create-vm/docker'
         tf_actions_version: latest
       
+      
+    - name: 'Terraform Plan'
+      uses: hashicorp/terraform-github-actions@master
+      with:
+        tf_actions_subcommand: 'plan' 
+        tf_actions_working_dir: './create-vm/docker'
+        tf_actions_version: latest
+        
+        
     
     
     
