--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -26,7 +26,7 @@ jobs:
         tf_actions_subcommand: 'plan' 
         tf_actions_working_dir: './create-vm/docker'
         tf_actions_version: latest
-        args: '-var="nutanix-userName=${{ secrets.NUTANIX_USERNAME }}" -var="nutanix-password=${{ secrets.NUTANIX_PASSWORD }}" -var="vm-count=1" -var="vm-name-prefix=Sr4-Perf" -auto-approve'
+        args: '-var="nutanix-userName=${{ secrets.NUTANIX_USERNAME }}" -var="nutanix-password=${{ secrets.NUTANIX_PASSWORD }}" -var="vm-count=1" -var="vm-name-prefix=Sr4-Perf"'
         
         
     
