--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -23,7 +23,7 @@ jobs:
     - name: 'Terraform Plan'
       uses: hashicorp/terraform-github-actions@master
       with:
-        tf_actions_subcommand: 'plan' 
+        tf_actions_subcommand: 'apply' 
         tf_actions_working_dir: './create-vm/docker'
         tf_actions_version: latest
         args: '-var="nutanix-userName=${{ secrets.NUTANIX_USERNAME }}" -var="nutanix-password=${{ secrets.NUTANIX_PASSWORD }}" -var="vm-count=1" -var="vm-name-prefix=Sr4-Perf"'
