--- a/create-vm/action.yml
+++ b/create-vm/action.yml
@@ -14,6 +14,9 @@ inputs:
   pat:
     description:  PAT
     required: true
+ outputs:
+   result:
+    description:The output for terraform output command
 runs:
   using: docker
   image: docker/Dockerfile
