--- a/create-vm/action.yml
+++ b/create-vm/action.yml
@@ -16,7 +16,7 @@ inputs:
     required: true
 outputs:
   result:
-    description: The output for terraform output command
+    description: 'The output for terraform output command'
 runs:
   using: docker
   image: docker/Dockerfile 
